\name{NEWS}
\title{News for Package 'rhdf5'}

\section{Changes in version 2.54.0}{

  \subsection{CHANGES}{
    \itemize{
      \item Disabled dataset timestamps, which were applied for compound 
      datasets but not other types.  Back ported to 2.52.1.
      (Thanks to Luke Zappia for reporting this 
      https://github.com/Huber-group-EMBL/rhdf5/issues/160)
      \item Exposed HDF5 API functions \code{H5Oget_info()}, \code{H5Fget_intent()}.
      \item Added function \code{h5readTimestamps} to extract object timestamp
      metadata.
    }
  }

}

\section{Changes in version 2.52.0}{

  \subsection{CHANGES}{
    \itemize{
      \item Removed used of the non-API `STRING_PTR` function when permuting
      string datasets.
    }
  }

  \subsection{Bug fixes}{
    \itemize{
      \item Fixed overflow when trying to write a large number of very long
      strings.  Backported to 2.50.1. 
      (Thanks to Aaron Lun @LTLA for reporting this
      https://github.com/grimbough/rhdf5/issues/151).
      \item Addressed potential issued caused by undefined compiler behaviour
      when arrays of length zero were being created in C code.  Backported to
      2.50.2 (Thanks to Prof B. Ripley for reporting this.)
    }
  }
}

\section{Changes in version 2.48.0}{

  \subsection{CHANGES}{
    \itemize{
      \item R complex types can now be written to HDF5.  These will be stored as
      a compound datatype with two elements (r & i) representing the real and
      imaginary parts.
      \item Functions \code{H5Screate_simple} and \code{H5Sset_extent_simple} 
      now accept numeric values to the \code{dim} and \code{maxdim} arguments,
      allowing the creation of HDF5 dataspaces larger than R's maximum
      integer value.
      (Thanks to @hpages for reporting this and providing a patch
      https://github.com/grimbough/rhdf5/pull/140).
      \item Messages about the presence of \code{INT_MIN} in datasets created