@@ -24,15 +24,15 @@ NULL
 #' @rdname H5D_extras
 #' @export
 H5Dchunk_dims <- function(h5dataset) {
-    h5checktype(h5dataset, "dataset")
-    
-    pid <- H5Dget_create_plist(h5dataset)
-    on.exit(H5Pclose(pid), add=TRUE)
-    
-    if (H5Pget_layout(pid) != "H5D_CHUNKED")
-        return(NULL)
-    else 
-        return(rev(H5Pget_chunk(pid)))
+  h5checktype(h5dataset, "dataset")
+
+  pid <- H5Dget_create_plist(h5dataset)
+  on.exit(H5Pclose(pid), add=TRUE)
+
+  if (H5Pget_layout(pid) != "H5D_CHUNKED")
+    return(NULL)
+  else 
+    return(rev(H5Pget_chunk(pid)))
 }
 
 #' @rdname H5D_extras
