@@ -1208,3 +1208,19 @@ SEXP _H5Dset_extent( SEXP _dataset_id, SEXP _size ) {
     UNPROTECT(1);
     return Rval;
 }
+
+SEXP _H5Dget_num_chunks( SEXP _dataset_id, SEXP _dataspace_id ) {
+    hid_t dataset_id = STRSXP_2_HID( _dataset_id );
+    hid_t dataspace_id = STRSXP_2_HID( _dataspace_id );
+    hsize_t nchunks = 0;
+
+    herr_t herr = H5Dget_num_chunks(dataset_id, dataspace_id, &nchunks);
+    if(herr < 0) {
+        error("Unable to determine the number of chunks\n");
+    }
+
+    SEXP Rval;
+    PROTECT(Rval = ScalarInteger(nchunks));
+    UNPROTECT(1);
+    return(Rval);
+}
